--- a/css/_intlTelInput.scss
+++ b/css/_intlTelInput.scss
@@ -1237,14 +1237,14 @@
 
 .iti__flag {
   height: 15px;
-  background-image: url("../assets/flags.png");
+  background-image: url("assets/flags.png");
   background-repeat: no-repeat;
   background-color: #dbdbdb;
   background-position: 20px 0;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
 .iti__flag {
-      background-image: url("../assets/flags@2x.png"); }
+      background-image: url("assets/flags@2x.png"); }
 }
 
 .iti__flag.iti__np {
