--- a/css/styles.css
+++ b/css/styles.css
@@ -1879,7 +1879,7 @@ input[readonly]
 
 .iti__flag {
   height: 15px;
-  background-image: url("/assets/flags.png");
+  background-image: url("assets/flags.png");
   background-repeat: no-repeat;
   background-color: #dbdbdb;
   background-position: 20px 0;
@@ -1887,7 +1887,7 @@ input[readonly]
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   .iti__flag {
-    background-image: url("/assets/flags@2x.png");
+    background-image: url("assets/flags@2x.png");
   }
 }
 
@@ -2078,7 +2078,7 @@ form button[type="button"] {
 }
 
 .iti__active::before {
-  content: url("/assets/checked-list.svg") !important;
+  content: url("assets/checked-list.svg") !important;
   padding: 9px 8px 8px 8px;
   z-index: 11;
 }
